# kiwi-rs

./: .gitignore  .gitmodules  Cargo.toml  build.rs  readme.md
.zed/: settings.json
src/: analyzed.rs  bindings.rs  builder.rs  error.rs  extracted.rs  kiwi.rs  lib.rs  match.rs  morpheme_set.rs  pos_tag.rs  pretokenized.rs  token.rs  trampoline.rs  typo.rs  word_segmentation.rs
tests/: test_analyze.rs
