[package]
name = "kiwi"
version = "0.20.4-1"
edition = "2021"
description = "Rust bindings for Kiwi (Korean Intelligent Word Identifier)"
authors = ["Lee TaeWoo <user@syrflover.co>"]
homepage = "https://github.com/syrflover/kiwi-rs"
repository = "https://github.com/syrflover/kiwi-rs"
license = "MIT"
keywords = []
categories = ["api-bindings", "text-processing"]
rust-version = "1.84"
readme = "readme.md"

[features]
static = []
static_prebuilt = []

[dependencies]
either = "1.15"
thiserror = "2.0"
widestring = "1.2"

[dev-dependencies]
anyhow = "1.0"

[build-dependencies]
bindgen = "0.71"
cmake = "0.1"
