[package]
name = "rkiwi"
version = "0.20.4-1" # change KIWI_VERSION in build.rs
edition = "2021"
description = "Rust bindings for Kiwi (Korean Intelligent Word Identifier)"
authors = ["Lee TaeWoo <user@syrflover.co>"]
homepage = "https://github.com/syrflover/kiwi-rs"
repository = "https://github.com/syrflover/kiwi-rs"
license = "MIT"
keywords = []
categories = ["api-bindings", "text-processing"]
rust-version = "1.84"
readme = "readme.md"

[features]
static = []
static_prebuilt = []
impl_send = []

[dependencies]
either = "1.15"
parking_lot = "0.12"
thiserror = "2.0"
tracing = "0.1"
widestring = "1.2"

[dev-dependencies]
anyhow = "1.0"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3"

[build-dependencies]
bindgen = "0.71"
cmake = "0.1"
